--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^11.0.16
   image_picker: ^0.8.7
   connectivity_plus: ^3.0.3
+  file_picker: ^5.2.6
 
 
   # The following adds the Cupertino Icons font to your application.
